Improve LocalMemberTable
Sadly, changing the member key computation ripples through
JavaFX-related code.